--- a/css/curtain.css
+++ b/css/curtain.css
@@ -1,73 +1,80 @@
-.curtain {
-	width: 100vw;
-	height: 100vh;
-	overflow: hidden;
-	z-index: 0;
+body{
+	margin: 0;
+	padding: 0;
+	font-size: 14px;
+	overflow-x: hidden;
+}
 
-	/* CSS variables to prevent duplication below */
-	--piece-width: 100px;
+.curtain {
+width: 100vw;
+height: 100vh;
+overflow: hidden;
+z-index: 0;
+
+/* CSS variables to prevent duplication below */
+--piece-width: 100px;
 }
 
 .curtain .content {
-	/* I used flex since I'm more comfortable with that, but you can use floats if you prefer. */
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	width: 100%;
-	height: 100%;
-	z-index: 0;
+/* I used flex since I'm more comfortable with that, but you can use floats if you prefer. */
+display: flex;
+align-items: center;
+justify-content: center;
+width: 100%;
+height: 100%;
+z-index: 0;
 }
 
 .curtain-panel {
-	display: flex;
-	align-items: center;
-	position: absolute;
-	width: 50%;
-	height: 100%;
+display: flex;
+align-items: center;
+position: absolute;
+width: 50%;
+height: 100%;
 
-	transition: left, right;
-	transition-duration: 3s;
+transition: left, right;
+transition-duration: 4s;
 }
 
 .curtain-panel.left {
-	left: 0;
-	justify-content: end;
+left: 0;
+justify-content: end;
 }
 
 .curtain-panel.right {
-	right: 0;
+right: 0;
 }
 
 .curtain-panel::before {
-	content: "";
-	position: absolute;
-	top: 0;
-	left: 0;
-	right: 0;
-	bottom: 0;
-	z-index: 1;
+content: "";
+position: absolute;
+top: 0;
+left: 0;
+right: 0;
+bottom: 0;
+z-index: 1;
 
-	background-color: #333;
+background-color: #333;
 }
 
 .curtain-piece-left {
-	width: var(--piece-width);
-	height: auto;
-	z-index: 2;
-	margin: calc(100% - var(--piece-width) / 2);
+width: var(--piece-width);
+height: auto;
+z-index: 2;
+margin: calc(100% - var(--piece-width) / 2);
 }
 
 .curtain-piece-right {
-	width: var(--piece-width);
-	height: auto;
-	z-index: 2;
-	margin: calc(var(--piece-width) / -2);
+width: var(--piece-width);
+height: auto;
+z-index: 2;
+margin: calc(var(--piece-width) / -2);
 }
 
-.curtain:hover .left {
-	left: -100%;
+.transition-left{
+left: -100% !important;
 }
 
-.curtain:hover .right {
-	right: -100%;
+.transition-right{
+right: -100% !important;
 }
